[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://ui/UI.tscn" type="PackedScene" id=4]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="UI" parent="." instance=ExtResource( 4 )]
pause_mode = 2
margin_top = 0.474274
margin_bottom = 0.474243
[connection signal="level_selected" from="UI" to="." method="_on_UI_level_selected"]
[connection signal="level_unselected" from="UI" to="." method="_on_UI_level_unselected"]
[connection signal="unpaused" from="UI" to="." method="_on_UI_unpaused"]
